examples/test/testpolicy16540.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16540
  namespace: namespace281
spec:
  podSelector:
    matchLabels:
      key34: value24
      key39: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value46
          key33: value26
      podSelector:
        matchLabels:
          key45: value39
          key27: value49
